[tool.poetry]
name = "practice-reinforcement-learning"
version = "0.1.0"
description = ""
authors = ["rifatrakib <Rakib.1508@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.17.0"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
jupyter = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
ruff = "^0.6.8"

[tool.black]
line-length = 140
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.flake8]
max-line-length = 140
exclude = [".git", "__pycache__", "dist"]
max-complexity = 10

[tool.isort]
atomic = true
profile = "black"
line_length = 140
skip_gitignore = true

[tool.ruff]
line-length = 140
exclude = [".git", "__pycache__", "dist"]
target-version = "py39"
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
max-complexity = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
